+ git based definitions downloader

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 
 [dependencies]
 
+cooplan-definitions-lib = "0.1.1"
+cooplan-definitions-io-lib = "0.1.1"
+
+git2 = "0.15.0"
+
 # Async runtime
 tokio = { version = "1", features = ["full"] }
 
