--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ cooplan-definitions-io-lib = "0.1.1"
 
 git2 = "0.15.0"
 
+serde = { version = "1.0.141", features = ["derive"] }
+serde_json = "1.0.82"
+
 # Async runtime
 tokio = { version = "1", features = ["full"] }
 
