--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ git2 = "0.15.0"
 serde = { version = "1.0.141", features = ["derive"] }
 serde_json = "1.0.82"
 
+log = "0.4.17"
+simple_logger = "2.3.0"
+
+async-recursion = "1.0.0"
+
 # Async runtime
 tokio = { version = "1", features = ["full"] }
 
