--- a/config.json
+++ b/config.json
@@ -11,5 +11,12 @@
         "download_retry_interval_seconds": 120,
         "update_retry_count": 5,
         "update_retry_interval_seconds": 300
+    },
+    "output": {
+        "amqp_channel_name": "definition-provider-output",
+        "connection_retry_count": 5,
+        "connection_retry_interval_seconds": 300,
+        "set_retry_count": 5,
+        "set_retry_interval_seconds": 300
     }
 }
