r move git downloader's logic into separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ edition = "2021"
 
 cooplan-definitions-lib = "0.1.4"
 cooplan-definitions-io-lib = "0.1.5"
-
-git2 = "0.15.0"
+cooplan-definition-git-downloader = "0.1.0"
 
 serde = { version = "1.0.141", features = ["derive"] }
 serde_json = "1.0.82"
