--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,6 +15,11 @@ jobs:
       rabbitmq:
         # Docker Hub image
         image: rabbitmq:3.11-management
+        env:
+          RABBITMQ_DEFAULT_USER: guest
+          RABBITMQ_DEFAULT_PASS: guest
+        ports:
+          - 5672:5672
 
     steps:
       - name: Checkout provider's code
