--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -14,12 +14,9 @@ jobs:
       # Label used to access the service container
       rabbitmq:
         # Docker Hub image
-        image: rabbitmq:3.11-management
-        env:
-          RABBITMQ_DEFAULT_USER: guest
-          RABBITMQ_DEFAULT_PASS: guest
+        image: rabbitmq:3.11
         ports:
-          - 5672
+          - 5672:5672
     steps:
       - name: Checkout provider's code
         uses: actions/checkout@v3
@@ -43,4 +40,4 @@ jobs:
         env:
           GIT_USERNAME: 'simple0x47'
           GIT_PASSWORD: ${{ secrets.ACCESS_TOKEN }}
-          AMQP_CONNECTION_URI: ${{ format('{0}:{1}', 'amqp://guest:guest@rabbitmq', job.services.rabbitmq.ports['5672']) }}
+          AMQP_CONNECTION_URI: 'amqp://guest:guest@localhost:5672'
