--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           GIT_USERNAME: 'simple0x47'
           GIT_PASSWORD: ${{ secrets.ACCESS_TOKEN }}
-          AMQP_CONNECTION_URI: 'amqp://guest:guest@localhost:5672'
+          AMQP_CONNECTION_URI: 'amqp://guest:guest@rabbitmq:5672'
